Changes in version 2.6.0
+ New functions: 
  - createGroupByColumn
  - clearEdgeBends
+ New parameter to return SUIDs for
  - getSelectedNodes
  - getSelectedEdges
+ New, more robust handling of file type
+ New support for loading list data
+ Doc Fixes
  - added Filters to Overview vignette
  - improved file type handling descriptions
Changes in vesion 2.4.3
+ Bug Fixes
  - import functions -- #62 fixed default directory
Changes in vesion 2.4.2
+ Bug Fixes
  - getEdgeInfo -- #61 missing function
Changes in vesion 2.4.1
+ Bug Fixes
  - getLayoutPropertyNames -- #59 fixed returned values
  - createNetworkFromIgraph -- #58 flatten list attributes to strings
Changes in version 2.4.0
+ New style setting functions
  - setEdgeFontFaceDefault
  - setEdgeFontFaceMapping
  - setEdgeFontSizeMapping
  - setEdgeLabelDefault
  - setEdgeLabelColorDefault
  - setEdgeLabelColorMapping
  - setEdgeLabelOpacityDefault
  - setEdgeLabelOpacityMapping
  - setEdgeOpacityDefault
  - setEdgeSourceArrowShapeMapping
  - setEdgeTargetArrowShapeMapping
  - setEdgeTooltipDefault
  - setNodeBorderOpacityDefault
  - setNodeBorderOpacityMapping
  - setNodeFillOpacityDefault
  - setNodeFillOpacityMapping
  - setNodeFontFaceDefault
  - setNodeFontFaceBypass
  - setNodeFontFaceMapping
  - setNodeFontSizeMapping
  - setNodeHeightDefault
  - setNodeHeightMapping
  - setNodeLabelDefault
  - setNodeLabelColorMapping
  - setNodeLabelOpacityDefault
  - setNodeLabelOpactiyMapping
  - setNodeTooltipDefault
  - setNodeTooltipBypass
  - setNodeWidthDefault
  - setNodeWidthMapping
+ Bug Fixes
  - createSubnetwork -- #43 network suids i/o names
  - openSession works with current working directory -- #50
+ Doc Fixes
  - improved visual.prop handling in mapVisualProperty -- #49,#53 user report
  - added file overwrite warnings to all export and save functions
Changes in version 2.2.7
+ Doc Fixes
  - vignette for phylogenetic trees
Changes in vesion 2.2.6
+ Bug Fixes